// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly when modal window open 1`] = `
<section
  className="container"
>
  <Modal
    removeTrailerInfo={[MockFunction]}
    trailer={null}
    trailerError={null}
    trailerIsLoading={false}
  />
  <FilterTabs
    condition="Trending"
    fetchByFilter={[Function]}
    genres={
      Array [
        "crime",
        "actions",
      ]
    }
    historyPush={[MockFunction]}
    name="Tabs"
  />
  <MovieList
    fetchTrailer={[MockFunction]}
    movies={
      Array [
        Object {
          "id": 123,
          "title": "title",
        },
      ]
    }
    removeDetailsInfo={[MockFunction]}
    setMoviesCondition={[MockFunction]}
  />
</section>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly when movies is loading 1`] = `
<div
  className="container"
>
  <FilterTabs
    condition="Trending"
    fetchByFilter={[Function]}
    genres={Array []}
    name="Tabs"
  />
  <Spinner />
</div>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly with closed modal window 1`] = `
<section
  className="container"
>
  <FilterTabs
    condition="Trending"
    fetchByFilter={[Function]}
    genres={
      Array [
        "crime",
        "actions",
      ]
    }
    historyPush={[MockFunction]}
    name="Tabs"
  />
  <MovieList
    fetchTrailer={[MockFunction]}
    movies={
      Array [
        Object {
          "id": 123,
          "title": "title",
        },
      ]
    }
    removeDetailsInfo={[MockFunction]}
    setMoviesCondition={[MockFunction]}
  />
</section>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly with error message 1`] = `
<div
  className="container"
>
  Error! error
</div>
`;
